# xdg_desktop_portal_wayland

./: Cargo.toml
src/: comm.rs  main.rs  portal.rs  screencast.rs
src/backends/: mod.rs  screencast.rs  session.rs  settings.rs
src/config/: mod.rs  toml_config.rs
