[package]
name = "xdg_desktop_portal_wayland"
version = "0.1.0"
edition = "2021"

[dependencies]
csscolorparser = "0.6.2"
futures = "0.3.30"
notify = "6.1.1"
once_cell = "1.19.0"
pipewire = "0.8.0"
serde = "1.0.203"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wayland-client = "0.31.3"
wayland-protocols-wlr = { version = "0.3.1", features = ["client"] }
zbus = "4.2.2"
